--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -17,30 +17,19 @@
 <title>EventosApp</title>
 </head>
 <body>
-	<h1>Lista de Eventos</h1>
-	<h3>
-		<a class="waves-effect waves-light btn" href="/cadastrarEvento"><i
-			class="material-icons left">add_circle_outline
-</i>Cadastrar Evento</a>
+	<h1>Evento</h1>
+<h3>
+		<a class="waves-effect waves-light btn" href="/eventos"><i
+			class="material-icons left">list</i>Listar Evento</a>
 	</h3>
-	<table class="container">
-	<thead>
-		<tr>
-		<th>Nome</th>
-		<th>Local</th>
-		<th>Data</th>
-		<th>Horario</th>
-		</tr>
-	</thead>
-	<tbody>
-	<tr th:each="evento: ${eventos}">
-		<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>	
-		<td><span th:text="${evento.local}"></span></td>
-		<td><span th:text="${evento.data}"></span></td>
-		<td><span th:text="${evento.horario}"></span></td>
-	</tr>
-	</tbody>
-	</table>
+	<div th:each="evento : ${evento}" class="container">
+		<div class="row">
+			<p>Nome: <span th:text="${evento.nome}"></span></p>
+			<p>Local: <span th:text="${evento.local}"></span></p>
+			<p>Data: <span th:text="${evento.data}"></span></p>
+			<p>Horario: <span th:text="${evento.horario}"></span></p>
+		</div>
+	</div>
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
