--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -2,18 +2,41 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
+<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet"
+	href="materialize/css/materialize.min.css" media="screen,projection" />
+
+<!--Let browser know website is optimized for mobile-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <title>EventosApp</title>
 </head>
 <body>
-<h1>Cadastro de Eventos:</h1>
-<form method="post">
-Nome:<input type="text" value="" name="nome">
-Local:<input type="text" value="" name="local">
-Data:<input type="date" value="" name="data">
-Horario:<input type="text" value="" name="horario">
-<button type="submit">Salvar</button>
-</form>
+	<h1>Cadastro de Eventos:</h1>
+	<h3>
+		<a class="waves-effect waves-light btn" href="/eventos"><i
+			class="material-icons left">list</i>Listar Evento</a>
+	</h3>
+	<form method="post" class="container">
+		Nome:<input type="text" value="" name="nome"> 
+		<div class="row">
+		<div class="input-field col s6">
+		Local:<input type="text" value="" name="local">
+		</div>
+		<div class="input-field col s3">
+		Data:<input type="date" value="" name="data">
+		</div>
+		<div class="input-field col s3">
+		Horario:<input type="text" value="" name="horario">
+		</div>
+		</div>
+		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
+	</form>
 </body>
+<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </html>
