--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -29,6 +29,11 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
+		<form  method="post">
+			Nome: <input type="text" value="" name="nomeConvidado"/>
+			RG: <input type="text" value="" name="rg"/>
+			<button class="waves-effect waves-light btn" type="submit">Adicionar </button>
+		</form>
 	</div>
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
