--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -29,6 +29,9 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
+		
+		<th:block th:include="mensagemValidacao"></th:block>
+		
 		<form  method="post">
 			Nome: <input type="text" value="" name="nomeConvidado"/>
 			RG: <input type="text" value="" name="rg"/>
