--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -22,18 +22,20 @@
 		<a class="waves-effect waves-light btn" href="/eventos"><i
 			class="material-icons left">list</i>Listar Evento</a>
 	</h3>
+	<th:block th:include="mensagemValidacao"></th:block>
+
 	<form method="post" class="container">
-		Nome:<input type="text" value="" name="nome"> 
+		Nome:<input type="text" value="" name="nome">
 		<div class="row">
-		<div class="input-field col s6">
-		Local:<input type="text" value="" name="local">
-		</div>
-		<div class="input-field col s3">
-		Data:<input type="date" value="" name="data">
-		</div>
-		<div class="input-field col s3">
-		Horario:<input type="text" value="" name="horario">
-		</div>
+			<div class="input-field col s6">
+				Local:<input type="text" value="" name="local">
+			</div>
+			<div class="input-field col s3">
+				Data:<input type="date" value="" name="data">
+			</div>
+			<div class="input-field col s3">
+				Horario:<input type="text" value="" name="horario">
+			</div>
 		</div>
 		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
 	</form>
