--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -15,13 +15,22 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <title>EventosApp</title>
+<link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
-	<h1>Cadastro de Eventos:</h1>
-	<h3>
-		<a class="waves-effect waves-light btn" href="/eventos"><i
-			class="material-icons left">list</i>Listar Evento</a>
-	</h3>
+
+	<header >
+		<nav>
+			<div class="nav-wrapper">
+				<a href="#" class="brand-logo">Cadastro de Eventos</a>
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a class="waves-effect waves-light btn" href="/eventos"><i
+			class="material-icons left">list</i>Listar evento</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	
 	<th:block th:include="mensagemValidacao"></th:block>
 
 	<form method="post" class="container">
@@ -34,7 +43,7 @@
 				Data:<input type="date" value="" name="data">
 			</div>
 			<div class="input-field col s3">
-				Horario:<input type="text" value="" name="horario">
+				Horario:<input type="time" value="" name="horario">
 			</div>
 		</div>
 		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
